[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unpack_clock_res"
version = "0.0.0"
description = "Utilities for unpacking DT Watch resources"
authors = [ { name = "", email = "" } ]
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
